--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "cross-env NODE_ENV=proudction node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "build:ui": "@powershell Remove-Item -Recurse -Force build && cd ../bcw-2023summer-jot-react && npm run build && @powershell Copy-Item build -Recurse ../bcw-2023summer-jot-server",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "Arrington Mata",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-oauth2-jwt-bearer": "^1.5.0",
+    "express-openid-connect": "^2.16.0",
     "mongoose": "^7.4.0"
   },
   "devDependencies": {
@@ -25,6 +29,11 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "nodemon": "^3.0.1"
+    "jest": "^29.6.4",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
